Fix code smell raised by SonarCloud
Replace 'Stream.collect(Collectors.toList())' with 'Stream.toList()' in the CrownCourtMapper