@@ -1,16 +1,15 @@
 package uk.gov.justice.laa.crime.orchestration.mapper;
 
 import org.springframework.stereotype.Component;
+import uk.gov.justice.laa.crime.enums.CrownCourtOutcome;
 import uk.gov.justice.laa.crime.orchestration.dto.maat.CrownCourtSummaryDTO;
 import uk.gov.justice.laa.crime.orchestration.dto.maat.OutcomeDTO;
-import uk.gov.justice.laa.crime.enums.CrownCourtOutcome;
 import uk.gov.justice.laa.crime.orchestration.model.common.ApiCrownCourtOutcome;
 import uk.gov.justice.laa.crime.orchestration.model.common.ApiRepOrderCrownCourtOutcome;
 import uk.gov.justice.laa.crime.util.DateUtil;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CrownCourtMapper {
@@ -41,6 +40,6 @@ public class CrownCourtMapper {
                     outcomeDTO.setDescription(x.getOutcome().getDescription());
                     outcomeDTO.setDateSet(DateUtil.toDate(x.getOutcomeDate()));
                     return outcomeDTO;
-                }).collect(Collectors.toList());
+                }).toList();
     }
 }
